force-app/main/default/objects/ProductPrice__c/ProductPrice__c.object-meta.xml
<CustomObject>
    <description>Custom object used to keep details of products</description>
    <label>Product Price For Selected Category</label>
    <nameField>
        <displayFormat>P - {00000}</displayFormat>
        <label>Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Price For Selected Category</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>