force-app/main/default/objects/ProductPrice__c/fields/Beam__c.field-meta.xml
<CustomField>
    <fullName>Beam__c</fullName>
    <label>Beam</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>