force-app/main/default/objects/ProductPrice__c/fields/Boat_Type__c.field-meta.xml
<CustomField>
    <fullName>Boat_Type__c</fullName>
    <label>Boat Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inboard</fullName>
            </value>
            <value>
                <fullName>V-drive</fullName>
            </value>
            <value>
                <fullName>Outboard</fullName>
            </value>
            <value>
                <fullName>Inboard/Outboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>