force-app/main/default/objects/ProductPrice__c/fields/Curtailments_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Curtailments_Start_Date__c</fullName>
    <label>Curtailments Start Date</label>
    <type>Date</type>
</CustomField>