force-app/main/default/objects/ProductPrice__c/fields/Date_on_FloorPlan__c.field-meta.xml
<CustomField>
    <fullName>Date_on_FloorPlan__c</fullName>
    <label>Date on FloorPlan</label>
    <type>Date</type>
</CustomField>