force-app/main/default/objects/ProductPrice__c/fields/Model_Variant__c.field-meta.xml
<CustomField>
    <fullName>Model_Variant__c</fullName>
    <description>Specifies the Model Variant corresponding to the selected Model.</description>
    <label>Model Variant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>