force-app/main/default/objects/ProductPrice__c/fields/Net_Weight__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight__c</fullName>
    <label>Net Weight</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>