force-app/main/default/objects/ProductPrice__c/fields/Option_Category__c.field-meta.xml
<CustomField>
    <fullName>Option_Category__c</fullName>
    <label>Option Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>