force-app/main/default/objects/ProductPrice__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Gallery</fullName>
            </value>
            <value>
                <fullName>Jet Drives</fullName>
            </value>
            <value>
                <fullName>Misc</fullName>
            </value>
            <value>
                <fullName>Personal Watercraft</fullName>
            </value>
            <value>
                <fullName>Pontoon Boat</fullName>
            </value>
            <value>
                <fullName>Ski Boats</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>