force-app/main/default/objects/ProductPrice__c/fields/Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Product_Model__c</fullName>
    <label>Product Model</label>
    <length>225</length>
    <type>Text</type>
</CustomField>