force-app/main/default/objects/ProductPrice__c/fields/ProductManufacturer__c.field-meta.xml
<CustomField>
    <fullName>ProductManufacturer__c</fullName>
    <label>Product Manufacturer</label>
    <length>225</length>
    <type>Text</type>
</CustomField>