force-app/main/default/objects/ProductPrice__c/fields/ProductRetail_Price__c.field-meta.xml
<CustomField>
    <fullName>ProductRetail_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>