force-app/main/default/objects/ProductPrice__c/fields/ProductSelected_Category__c.field-meta.xml
<CustomField>
    <fullName>ProductSelected_Category__c</fullName>
    <label>Selected Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>