force-app/main/default/objects/ProductPrice__c/fields/Select_Category__c.field-meta.xml
<CustomField>
    <fullName>Select_Category__c</fullName>
    <label>Select Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Options__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Bimini Top</fullName>
            </value>
            <value>
                <fullName>Boat Cover - 7 ft. thru 14 ft.</fullName>
            </value>
            <value>
                <fullName>Boat Cover - 15 ft. thru 19 ft.</fullName>
            </value>
            <value>
                <fullName>Boat Cover - 20 ft. thru 25 ft.</fullName>
            </value>
            <value>
                <fullName>Boat Cover - 26 ft. thru 31 ft.</fullName>
            </value>
            <value>
                <fullName>Boat Cover - 32 ft. thru 42 ft.</fullName>
            </value>
            <value>
                <fullName>Boat Cover - Custom - 18 ft. thru 25 ft.</fullName>
            </value>
            <value>
                <fullName>Bow Cover</fullName>
            </value>
            <value>
                <fullName>Bridge Enclosure</fullName>
            </value>
            <value>
                <fullName>Cockpit Cover</fullName>
            </value>
            <value>
                <fullName>Salon Enclosures</fullName>
            </value>
            <value>
                <fullName>Auto Pilot - boats to 20,000lbs</fullName>
            </value>
            <value>
                <fullName>Auto Pilot w/Remote - boats to 20,000lbs</fullName>
            </value>
            <value>
                <fullName>Auto Pilot - 20,000 - 40,000lbs boats</fullName>
            </value>
            <value>
                <fullName>Auto Pilot w/Remote - 20,000 - 40,000lbs boats</fullName>
            </value>
            <value>
                <fullName>Battery Charger - Dual 10 amp</fullName>
            </value>
            <value>
                <fullName>Battery Charger - Triple 10 amp</fullName>
            </value>
            <value>
                <fullName>Depth Sounder</fullName>
            </value>
            <value>
                <fullName>Fish Finder - Max Depth 600&#39;</fullName>
            </value>
            <value>
                <fullName>Fish Finder - Max Depth 1000&#39;</fullName>
            </value>
            <value>
                <fullName>Fish Finder - Max Depth 2500&#39;</fullName>
            </value>
            <value>
                <fullName>Fish Finder - Max Depth 1000&#39; (Color screen under 5&quot;)</fullName>
            </value>
            <value>
                <fullName>Fish Finder w/GPS - Max Depth 1000&#39; (Color screen under 5&quot;)</fullName>
            </value>
            <value>
                <fullName>Fish Finder w/GPS - Max Depth 3000&#39; (Color screen over 5&quot;)</fullName>
            </value>
            <value>
                <fullName>GPS - Color Fixed Mount w/Cartography</fullName>
            </value>
            <value>
                <fullName>GPS - Fixed Mount</fullName>
            </value>
            <value>
                <fullName>GPS - Fixed Mount w/Cartography</fullName>
            </value>
            <value>
                <fullName>Inverter / Charger - 600w</fullName>
            </value>
            <value>
                <fullName>Inverter / Charger - 800w</fullName>
            </value>
            <value>
                <fullName>Inverter / Charger - 1000w</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>