force-app/main/default/objects/ProductPrice__c/fields/Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Order__c</fullName>
    <inlineHelpText>Used for Sorting the Order in which the Options must appear for a Particular model of a manufacturer.</inlineHelpText>
    <label>Sorting Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>