force-app/main/default/objects/ProductPrice__c/recordTypes/Trailer.recordType-meta.xml
<RecordType>
    <fullName>Trailer</fullName>
    <active>true</active>
    <label>Trailer</label>
</RecordType>