force-app/main/default/objects/ProductPrice__c/validationRules/Product_Code_Mandatory_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Code_Mandatory_Rule</fullName>
    <active>true</active>
    <description>Product code must be entered while creating a record for New Boats.</description>
    <errorConditionFormula>ISBLANK( Product_Code__c ) &amp;&amp;  RecordType.Name ==&apos;New Boats&apos;</errorConditionFormula>
    <errorDisplayField>Product_Code__c</errorDisplayField>
    <errorMessage>Product code must be entered while creating a record for New Boats.</errorMessage>
</ValidationRule>