force-app/main/default/objects/ProductPrice__c/validationRules/Sorting_Order_Mandatory_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Sorting_Order_Mandatory_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name ==&apos;New Boats&apos; &amp;&amp; ISBLANK( Sorting_Order__c )</errorConditionFormula>
    <errorMessage>Sorting Order is Mandatory</errorMessage>
</ValidationRule>