force-app/main/default/objects/ProductPrice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>ProductManufacturer__c</columns>
    <columns>Year__c</columns>
    <columns>Sorting_Order__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Option_Category__c</columns>
    <columns>ProductSelected_Category__c</columns>
    <columns>ProductRetail_Price__c</columns>
    <columns>Dealer_Price__c</columns>
    <columns>Product_Model__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>